--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
+    "btoa": "^1.2.1",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "tap": "^14.9.2"
   },
   "dependencies": {
     "got": "^9.6.0",
@@ -18,6 +20,7 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --single",
-    "start:dev": "sirv public --single --dev"
+    "start:dev": "sirv public --single --dev",
+    "test": "tap"
   }
 }
